--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,5 +5,6 @@ Flask-CORS==4.0.0
 Werkzeug==3.0.1
 python-dotenv==1.0.0
 firebase-admin==6.5.0
-psycopg==3.2.0
+psycopg2-binary>=2.9.5
+gunicorn>=20.1.0
 
